--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"gcm_sender_id": "482941778795",
-	"gcm_sender_id_comment": "Nie zmieniaj GCM Sender ID"
+	"gcm_sender_id_comment": "Nie zmieniaj GCM Sender ID",
 	"name": "Golgota Młodych",
 	"icons": [
 		{
